# cpp_net_homework_6

./: CMakeLists.txt  README.md  auth.txt  cert.pem  client.cpp  client.h  err_decode.cpp  key.pem  main.h  server.cpp  server.h
